Separated comments from spams.

--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,44 +1,96 @@
-<header><h3>comentários</h3></header>
 <div class="module_content">
   
-<% flash.each do |key, value| %>
-  <h4 class="flash <%= key %>"><%= value %></h4>
-  <div class="clear" style="margin:0 0 12px 0;"></div>
-<% end %>
-  
-<table class="tablesorter" cellspacing="0"> 
-  <thead> 
-  <tr> 
-      <th></th> 
-      <th>Comentário</th> 
-      <th>Post</th>
-      <th>Autor</th> 
-      <th>Data</th> 
-      <th>Ações</th> 
-  </tr> 
-  </thead> 
-  <tbody> 
-
-  <% @comments.each do |comment| %>
-    <tr> 
-      <td><input type="checkbox"></td> 
-      <td><%= sanitize comment.body, :tags => %w(strong em code a br) %></td> 
-      <td><%= comment.post.title %></td>
-      <td><%= comment.author %></td> 
-      <td><%= comment.created_at.strftime("%d/%m/%Y %l:%M") %></td> 
-      <td>
-        <%= link_to image_tag("admin/icn_edit.png", :title => "Editar comentário"), edit_admin_comment_path(comment) %>
-        <%= link_to image_tag("admin/icn_trash.png", :title => "Excluir comentário"), admin_comment_path(comment), 
-                                 :method => :delete,
-    														 :confirm => "Tem certeza que deseja excluir este comentário?",
-    												 		 :title => "Excluir comentário" %>
-      </td> 
-    </tr> 
+  <% flash.each do |key, value| %>
+    <h4 class="flash <%= key %>"><%= value %></h4>
+    <div class="clear" style="margin:0 0 12px 0;"></div>
   <% end %>
 
-</tbody>
-</table>
+  <header><h3 class="tabs_involved">Comentários</h3>
+  <ul class="tabs">
+    <li><a href="#tab1">Publicados</a></li>
+    <li><a href="#tab2">Spam</a></li>
+  </ul>
+  </header>
 
-<%= will_paginate @comments, :next_label => "próximo &raquo;", :previous_label => "&laquo; anterior" %>
+  <div class="tab_container">
+
+    <div id="tab1" class="tab_content">
+      <table class="tablesorter" cellspacing="0"> 
+        <thead> 
+        <tr> 
+            <th></th> 
+            <th>Comentário</th> 
+            <th>Post</th>
+            <th>Autor</th> 
+            <th>Data</th> 
+            <th>Ações</th> 
+        </tr> 
+        </thead> 
+        <tbody> 
+
+        <% @comments.each do |comment| %>
+          <tr> 
+            <td><input type="checkbox"></td> 
+            <td><%= sanitize comment.body, :tags => %w(strong em code a br) %></td> 
+            <td><%= comment.post.title %></td>
+            <td><%= comment.author %></td> 
+            <td><%= comment.created_at.strftime("%d/%m/%Y %l:%M") %></td> 
+            <td>
+              <%= link_to image_tag("admin/icn_edit.png", :title => "Editar comentário"), edit_admin_comment_path(comment) %>
+              <%= link_to image_tag("admin/icn_trash.png", :title => "Excluir comentário"), admin_comment_path(comment), 
+                                      :method => :delete,
+                                      :confirm => "Tem certeza que deseja excluir este comentário?",
+                                      :title => "Excluir comentário" %>
+            </td> 
+          </tr> 
+        <% end %>
+
+      </tbody>
+      </table>
+
+      <%= will_paginate @comments, :next_label => "próximo &raquo;", :previous_label => "&laquo; anterior" %>
+
+    </div>
+
+    <div id="tab2" class="tab_content">
+
+      <table class="tablesorter" cellspacing="0"> 
+        <thead> 
+        <tr> 
+            <th></th> 
+            <th>Comentário</th> 
+            <th>Post</th>
+            <th>Autor</th> 
+            <th>Data</th> 
+            <th>Ações</th> 
+        </tr> 
+        </thead> 
+        <tbody> 
+
+        <% @spams.each do |comment| %>
+          <tr> 
+            <td><input type="checkbox"></td> 
+            <td><%= sanitize comment.body, :tags => %w(strong em code a br) %></td> 
+            <td><%= comment.post.title %></td>
+            <td><%= comment.author %></td> 
+            <td><%= comment.created_at.strftime("%d/%m/%Y %l:%M") %></td> 
+            <td>
+              <%= link_to image_tag("admin/icn_edit.png", :title => "Editar comentário"), edit_admin_comment_path(comment) %>
+              <%= link_to image_tag("admin/icn_trash.png", :title => "Excluir comentário"), admin_comment_path(comment), 
+                                      :method => :delete,
+                                      :confirm => "Tem certeza que deseja excluir este comentário?",
+                                      :title => "Excluir comentário" %>
+            </td> 
+          </tr> 
+        <% end %>
+
+      </tbody>
+      </table>
+
+      <%= will_paginate @spams, :next_label => "próximo &raquo;", :previous_label => "&laquo; anterior" %>
+
+    </div>
+
+  </div>
 
 </div>
