--- a/app/views/admin/comments/_form.html.erb
+++ b/app/views/admin/comments/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.label :body %>
     <%= f.text_area :body %>
   </fieldset>
+  
+  <fieldset>
+    <%= f.label "Publicar?" %>
+    <%= f.check_box :published %>
+  </fieldset>
 
   <footer>
     <div class="submit_link">
