--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,6 +22,8 @@
 </div>
 
 <script type="text/javascript">
+$(function(){
 	SyntaxHighlighter.config.clipboardSwf = '/clipboard.swf';
 	SyntaxHighlighter.all();
+});
 </script>
