--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,6 +12,7 @@
   
   <%= stylesheet_link_tag "daviferreira.css" %>
   <%= stylesheet_link_tag "msgtopo.css" %>  
+  <%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css" %>
 
   <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
   <%= stylesheet_link_tag "blog.css" %>
