--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -272,3 +272,19 @@ p.abstract a:hover{
   color:#000!important;
 }
 
+div.info{
+display: block;
+width: 95%;
+margin: 20px 3% 0 3%;
+margin-top: 20px;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
+background: #B5E5EF url(../../images/admin/icn_alert_info.png) no-repeat;
+background-position: 10px 10px;
+border: 1px solid #77BACE;
+color: #082B33;
+padding: 10px 0;
+text-indent: 40px;
+font-size: 14px;
+}
