--- a/app/views/layouts/_footer_blog.html.erb
+++ b/app/views/layouts/_footer_blog.html.erb
@@ -5,7 +5,9 @@
       <p>Meu nome é <%= link_to "Davi Ferreira", "http://www.twitter.com/davitferreira", :title => "Siga-me no twitter!" %> e sou um <%= link_to "desenvolvedor web", root_path, :title => "Visite meu portfólio!" %> com grande interesse em interfaces e usabilidade. Aqui você encontra artigos sobre programação e design.</p>
     <% else %>
     <ul class="social clearfix">
-      
+
+      <li class="googleplus"><g:plusone size="medium"></g:plusone></li>
+
       <li class="twitter"><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-url="http://www.daviferreira.com/blog/post/<%=@post.id%>/<%=@post.cached_slug%>.html">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
       
       <li class="fb"><div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="" layout="button_count" show_faces="false" colorscheme="dark" font=""></fb:like></li>
@@ -37,3 +39,7 @@ try {
 var pageTracker = _gat._getTracker("UA-1735379-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+  {lang: 'pt-BR'}
+</script>
