Some blog css adjustments.

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -275,7 +275,7 @@ p.abstract a:hover{
 div.info{
 display: block;
 width: 95%;
-margin: 20px 3% 0 3%;
+margin: 20px 0% 20px 0;
 margin-top: 20px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
@@ -287,4 +287,29 @@ color: #082B33;
 padding: 10px 0;
 text-indent: 40px;
 font-size: 14px;
+}
+
+div#screenshots{
+  padding:12px;
+  text-align:center;
+  background-color:#f2f2f2;
+  
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+div.info a{
+  border-bottom:1px dotted #000;
+}
+
+ul.list{
+  margin:0 0 20px 0;
+}
+
+ul.list li{
+  padding:4px;
+  margin:4px 0 0 22px;
+  border-bottom:1px dashed #ccc;
+  list-style:square;
 }
