--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html class="">
 <head>
   <meta charset="utf-8" />
   <title><%= meta_title %></title>
   <meta description="<%= meta_description %>">
-  <%= javascript_include_tag :all %>
-  <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
-  <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
-  <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4.pack" %>
-  
   <%= stylesheet_link_tag "daviferreira.css" %>
   <%= stylesheet_link_tag "msgtopo.css" %>
   
   <%= stylesheet_link_tag "portfolio.css" %>
   <%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css" %>
+
+  <%= javascript_include_tag :all %>
+  <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
+  <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
+  <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4.pack" %>
+  
   <%= csrf_meta_tag %>
   <link rel="shortcut icon" href="/images/favicon.gif" />
 </head>
