--- a/app/views/posts/_posts_portfolio.html.erb
+++ b/app/views/posts/_posts_portfolio.html.erb
@@ -1,4 +1,4 @@
-<section id="blog">
+<section id="blog" class="clearfix">
   <div id="blog-container">
     <h2><a href="#header" class="lnk-top">&uarr; topo</a>Blog</h2>
     <ul id="blog-posts" class="clearfix">
