--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,24 +4,21 @@
   <meta charset="utf-8" />
   <title><%= meta_title %></title>
   <meta description="<%= meta_description %>">
+
   <% if blog_home_page? %>
-    <%= javascript_include_tag :all %>
+    <%= include_javascripts :common %>
   <% else %>
-    <%= javascript_include_tag :all, :recursive => true %>
+    <%= include_javascripts :common, :post %>
   <% end %>
-  
-  <%= stylesheet_link_tag "daviferreira.css" %>
-  <%= stylesheet_link_tag "msgtopo.css" %>  
-  <%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css" %>
+
+  <% if blog_home_page? %>
+    <%= include_stylesheets :common, :blog, :media => 'all' %>
+  <% else %>
+    <%= include_stylesheets :common, :blog, :post, :media => 'all' %>
+  <% end %>
 
   <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
-  <%= stylesheet_link_tag "blog.css" %>
 
-  <% if not blog_home_page? %>
-    <%= stylesheet_link_tag "/javascripts/sh/styles/shCore.css" %>
-    <%= stylesheet_link_tag "/javascripts/sh/styles/shThemeDefault.css" %>
-  <% end %>
-  
   <%= csrf_meta_tag %>
   <link rel="shortcut icon" href="/images/favicon.gif" />
 </head>
