--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <title><%= meta_title %></title>
   <meta description="<%= meta_description %>">
-  <%= include_stylesheets :common, :portfolio, :media => 'all' %>
-  <%= include_javascripts :common, :portfolio %>
+  <%= include_stylesheets :portfolio, :media => 'all' %>
+  <%= include_javascripts :portfolio %>
 
   <%= csrf_meta_tag %>
   <link rel="shortcut icon" href="/images/favicon.gif" />
