--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -5,7 +5,7 @@
       <input type="text" name="query" id="query" placeholder="Pesquisar..." />
     </form>
   </div -->
-  <h1>Davi Ferreira/blog/*</h1>
+  <!-- h1>Davi Ferreira/blog/*</h1 -->
   <% else %>
   <h1><%= @post.title %></h1>
   <% end %>
