New font family and css improvements

--- a/app/views/layouts/_footer_blog.html.erb
+++ b/app/views/layouts/_footer_blog.html.erb
@@ -2,7 +2,7 @@
   <div class="container clearfix">
     <% if blog_home_page? %>
       <ul class="social clearfix"><li><%=link_to image_tag("rss.png"), blog_path(:format => "atom") %></li></ul>
-      <p>Meu nome é <%= link_to "Davi Ferreira", "http://www.twitter.com/davitferreira", :title => "Siga-me no twitter!" %> e sou um <%= link_to "desenvolvedor web", root_path, :title => "Visite meu portfólio!" %> com grande interesse em interfaces e usabilidade. Aqui você encontra artigos sobre programação e design.</p>
+      <p>Meu nome é <%= link_to "Davi Ferreira", "http://www.twitter.com/davitferreira", :title => "Siga-me no twitter!" %> e sou um <%= link_to "desenvolvedor web", root_path, :title => "Visite meu portfólio!" %> com grande interesse em interfaces. Aqui você encontra textos sobre programação e design.</p>
     <% else %>
     <ul class="social clearfix">
 
