Added a dot to leave your comments phrase :D

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     
     <% if not @post.block_comments %>
-    <h3 id="tit-form-comment">Deixe seu comentário</h3>
+    <h3 id="tit-form-comment">Deixe seu comentário:</h3>
       <%= render "comments/form", :id => "new_comment" %>
     <% end %>
   </div>
