--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,7 +17,7 @@
     <%= include_stylesheets :post, :media => 'all' %>
   <% end %>
 
-  <link href='http://fonts.googleapis.com/css?family=Comfortaa:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
 
   <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
 
