--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,10 +1,10 @@
-html{ font-family:  'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; }
+html{ font-family:  font-family: 'Didact Gothic', 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; }
 body { font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff; }
 h1, h2, h3 { margin-top:0; margin-bottom:0; }
 h1 { font-size:60px; padding:20px 0 20px 7px; border-bottom:1px dotted #ccc; }
 h2 { font-size:1.75em; margin-bottom:10px; }
 h3 { font-size:1.7em; margin:12px 0 12px 0; }
-h1, h2, h3, h4{ font-weight:300; line-height:1; font-family: 'Didact Gothic', sans-serif; }
+h1, h2, h3, h4{ font-weight:300; line-height:1;  }
 
 a{ text-decoration:none; }
 a:link { color:#ff6600; } 
