font-family bug

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,4 +1,4 @@
-html{ font-family:  font-family: 'Didact Gothic', 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; }
+html{ font-family: 'Didact Gothic', 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; }
 body { font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff; }
 h1, h2, h3 { margin-top:0; margin-bottom:0; }
 h1 { font-size:60px; padding:20px 0 20px 7px; border-bottom:1px dotted #ccc; }
