--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -241,7 +241,7 @@ div.post-abstract p.time-ago{
   color:#ccc;
   font-weight:300;
   font-size:14px;
-  margin:0 0;
+  margin:6px 0 0;
 }
 
 div.post-abstract p.actions{
