Droid sans font for pres

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@ $(function(){
     var lang = $(this).attr('class').replace(/brush:/, '');
     if(lang == "") lang = "xml";
     $(this).snippet(lang,{
-      style:"rand01",
+      style:"vim-dark",
       clipboard:"/flash/ZeroClipboard.swf",
     });
   });
