--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,11 +14,11 @@
           <a href="http://twitter.com/davitferreira" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF" data-lang="pt">Follow @davitferreira</a>
           <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
         </li>
-        <li>Mais sobre minha vida profissional, visite meu perfil no <%=link_to "Linkedin", "http://br.linkedin.com/in/daviferreira", :rel => "external" %>.</li>
-        <li>Meus projetos open source estão hospedados no <%=link_to "GitHub", "http://www.github.com/daviferreira", :rel => "external" %>.</li>
-        <li>Meus links favoritos você encontra no <%= link_to "Delicious", "http://www.delicious.com/daviferreira", :rel => "external" %>.</li>
-        <li>Alguns trabalhos de criação estão disponíveis no <%= link_to "DeviantArt", "http://daviferreira.deviantart.com", :rel => "external" %>.</li>
-        <li>E pra conferir as músicas que gosto acesse o meu perfil no <%= link_to "Last.fm", "http://www.last.fm/user/davitf", :rel => "external" %>.</li>
+        <li>Mais sobre minha vida profissional, visite meu perfil no <%=link_to "Linkedin", "http://br.linkedin.com/in/daviferreira" %>.</li>
+        <li>Meus projetos open source estão hospedados no <%=link_to "GitHub", "http://www.github.com/daviferreira" %>.</li>
+        <li>Meus links favoritos você encontra no <%= link_to "Delicious", "http://www.delicious.com/daviferreira" %>.</li>
+        <li>Alguns trabalhos de criação estão disponíveis no <%= link_to "DeviantArt", "http://daviferreira.deviantart.com" %>.</li>
+        <li>E pra conferir as músicas que gosto acesse o meu perfil no <%= link_to "Last.fm", "http://www.last.fm/user/davitf" %>.</li>
         
       </ul>
     </section>
