--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,10 +1,15 @@
-html{ font-family: 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; }
-body { font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff; }
-h1, h2, h3 { margin-top:0; margin-bottom:0; }
-h1 { font-size:60px; padding:20px 0 20px 7px; border-bottom:1px dotted #ccc; }
-h2 { font-size:1.75em; margin-bottom:10px; }
-h3 { font-size:1.7em; margin:12px 0 12px 0; }
-h1, h2, h3, h4{ font-weight:300; line-height:1; font-family: 'Didact Gothic',sans-serif; }
+body { font-family:"Helvetica Neue",Helvetica,Arial,sans-serif; font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff; }
+
+p{font-size:13px;font-weight:normal;line-height:18px;margin-bottom:18px;}p small{font-size:11px;color:#bfbfbf;}
+h1,h2,h3,h4,h5,h6{font-weight:bold;color:#404040;}h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{color:#bfbfbf;}
+h1{margin-bottom:18px;font-size:30px;line-height:36px;}h1 small{font-size:18px;}
+h2{font-size:24px;line-height:36px;}h2 small{font-size:14px;}
+h3,h4,h5,h6{line-height:36px;}
+h3{font-size:18px;}h3 small{font-size:14px;}
+h4{font-size:16px;}h4 small{font-size:12px;}
+h5{font-size:14px;}
+h6{font-size:13px;color:#bfbfbf;text-transform:uppercase;}
+hr{margin:0 0 19px;border:0;border-bottom:1px solid #eee;}
 
 a{ text-decoration:none; }
 a:link { color:#ff6600; } 
@@ -12,13 +17,11 @@ a:visited { color:#666; }
 a:hover { color:#4ca5fe; } 
 a:active { color:#3333ff; }
 
-header, section, footer{ margin:0 auto; width:960px; display: block; padding:0 0!important; }
+header, section, footer{ margin:0 auto; width:940px; display: block; padding:0 0!important; }
+body.post header{margin-top:24px;}
 p.publish-info{ font-size:0.75em; color:#666; }
 
 footer p { text-align:center; font-size:0.8em; padding:5.576em 0 2.576em; font-family:Helvetica, Arial, sans-serif; color: #999; }
-
-body.post header h1{ margin-bottom:0.625em; }
-body.post p{ margin:0 0 1.725em 0; line-height:24px; }
 
 div#search{float:right;margin:52px 9px 0 0;}
 
@@ -220,13 +223,13 @@ div#posts{
 }
 
 div.post-abstract{
-  margin:24px 0;
-  padding:12px 0;
-  text-align:center;
+  margin:12px 0;
 }
 
-div.post-abstract h2{
+div.post-abstract h1{
   margin:0 0 ;
+  font-weight:400;
+  font-size:24px;
 }
 
 div.post-abstract h2 a{
@@ -241,8 +244,6 @@ div.post-abstract h2 a:hover{
 div.post-abstract p.time-ago{
   color:#ccc;
   font-weight:300;
-  font-size:13px;
-  margin:6px 0 0;
 }
 
 div.post-abstract p.actions{
@@ -329,3 +330,7 @@ pre{
   font-size:12px;
   margin:12px 0;
 }
+
+blockquote{margin-bottom:18px;border-left:5px solid #eee;padding-left:15px;}blockquote p{font-size:14px;font-weight:300;line-height:18px;margin-bottom:0;}
+blockquote small,blockquote cite{display:block;font-size:12px;font-weight:300;line-height:18px;color:#bfbfbf;}blockquote small:before,blockquote cite:before{content:'\2014 \00A0';}
+blockquote p{margin:0 0!important;line-height:auto!important;}
