--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -10,6 +10,7 @@ h4{font-size:16px;}h4 small{font-size:12px;}
 h5{font-size:14px;}
 h6{font-size:13px;color:#bfbfbf;text-transform:uppercase;}
 hr{margin:0 0 19px;border:0;border-bottom:1px solid #eee;}
+li{font-size:13px;}
 
 a{ text-decoration:none; }
 a:link { color:#ff6600; } 
