--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
 	</div>
 	<div class="comment">
 		<p><strong><% if comment.url != "" %><%= link_to comment.author, check_for_http(comment.url) %><% else %><%= comment.author %><% end %> escreveu:</strong></p>
-		<p><%= sanitize comment.body, :tags => %w(strong em code br) %></p>
+		<p><%= sanitize_preserving_code comment.body %></p>
 		<% unless @post.block_comments %>
     <p class="reply"><%= link_to "Responder", reply_comment_path(comment), :id => "lnk-reply-#{comment.id}" %></p>
     <% end %>
