Added tableless boolean field to posts.

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -23,6 +23,11 @@
   </fieldset>
 
   <fieldset>
+    <%= f.label "Post do Tableless?" %>
+    <%= f.check_box :tableless %>
+  </fieldset>
+
+  <fieldset>
     <%= f.label "Publicar?" %>
     <%= f.check_box :published %>
   </fieldset>
