--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -365,3 +365,23 @@ div.alert-message.warning{background-color:#ffd75a;}
 div.alert-message.success{background-color:#74c474;}
 div.alert-message.info{background-color:#30c0fb;}
 div.alert-message a.close{float:right;margin-top:-2px;color:#fff;font-size:20px;font-weight:bold;text-shadow:0 1px 0 rgba(0, 0, 0, 0.5);filter:alpha(opacity=50);-khtml-opacity:0.5;-moz-opacity:0.5;opacity:0.5;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}div.alert-message a.close:hover{text-decoration:none;filter:alpha(opacity=50);-khtml-opacity:0.5;-moz-opacity:0.5;opacity:0.5;}
+
+.label {
+    background-color: #BFBFBF;
+    border-radius: 3px 3px 3px 3px;
+    color: #FFFFFF;
+    font-size: 9.75px;
+    font-weight: bold;
+    text-transform: uppercase;
+    height: 11px;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin: 0 0 0 12px;
+    padding: 4px;
+    text-transform: uppercase;
+    vertical-align: middle;
+    display: inline-block;
+}
+.label.important {
+    background-color: #C43C35;
+}
