Converted tableless field to receive post url.

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -23,8 +23,8 @@
   </fieldset>
 
   <fieldset>
-    <%= f.label "Post do Tableless?" %>
-    <%= f.check_box :tableless %>
+    <%= f.label "URL do post no Tableless" %>
+    <%= f.text_field :tableless %>
   </fieldset>
 
   <fieldset>
