Movendo JS para baixo.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,7 +24,7 @@
   </div>
 </footer>
 
-
+<%= include_javascripts :portfolio %>
 <script>
 $('.pagination a').live('click',function(e){  
   $('<div class="loader clearfix"><img src="/images/loader.gif" width="62" height="13" /></div>').insertAfter('.pagination-container');
