--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,10 @@
-<div id="posts">
+<ul id="posts-index">
 
   <% @posts.each do |post| %>
-  <div class="post-abstract">
-    <h1><%= link_to post.title, post_url(post) %><% if from_tableless(post) %><span class="label important">Tableless</span><% end %></h1>
-    <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %><% if not from_tableless(post) and (not post.block_comments or not post.comments.published.empty?) %> | <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %><% end %></p>
-    <!--
-    <p class="abstract"><%= link_to post.abstract, post_path(post) %></p>
-    -->
-  </div>
+  <li>
+    <h2><%= link_to post.title, post_url(post) %><% if from_tableless(post) %><span class="label tableless">Tableless</span><% end %></h2>
+    <div class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %><% if not from_tableless(post) and (not post.block_comments or not post.comments.published.empty?) %> | <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %><% end %></div>
+  </li>
   <% end %>
   
-</div>
+</ul>
