--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,387 +1,203 @@
-body { font-family:"Helvetica Neue",Helvetica,Arial,sans-serif; font-size:100%; line-height:1.25; padding-bottom:60px; background: #fff; }
-
-p{font-size:13px;font-weight:normal;line-height:18px;margin-bottom:18px;}p small{font-size:11px;color:#bfbfbf;}
-h1,h2,h3,h4,h5,h6{font-weight:bold;color:#000;}h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{color:#bfbfbf;}
-h1{margin-bottom:18px;font-size:36px;line-height:36px;color:#000;letter-spacing:-2px;}h1 small{font-size:18px;}
-h2{font-size:24px;line-height:36px;letter-spacing:-1.5px;color:#000;}h2 small{font-size:14px;}
-h3,h4,h5,h6{line-height:36px;}
-h3{font-size:18px;}h3 small{font-size:14px;}
-h4{font-size:16px;}h4 small{font-size:12px;}
-h5{font-size:14px;}
-h6{font-size:13px;color:#bfbfbf;text-transform:uppercase;}
-hr{margin:0 0 19px;border:0;border-bottom:1px solid #eee;}
-li{font-size:13px;}
-
-a{ text-decoration:none; }
-a:link { color:#ff6600; } 
-a:visited { color:#666; } 
-a:hover { color:#4ca5fe; } 
-a:active { color:#3333ff; }
-
-header, section, footer{ margin:0 auto; width:940px; display: block; padding:0 0!important; }
-body.post header{margin-top:24px;}
-p.publish-info{ font-size:0.75em; color:#666; }
-
-footer p { text-align:center; font-size:0.8em; padding:5.576em 0 2.576em; font-family:Helvetica, Arial, sans-serif; color: #999; }
-
-div#search{float:right;margin:52px 9px 0 0;}
-
-div#search input[type="text"]{
-  background:#f5f5f5 url(/images/magnifier.png) 6px 6px no-repeat;
-  padding:4px 4px 4px 20px;
-  border:1px solid #ccc;
-  border-radius:6px;
-  -moz-border-radius:6px;
-  -moz-border-radius:6px;
-  width:200px;
+/* Reset
+-------------------------------------------------------------- */
+    
+/* v1.0 | 20080212 */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
 
-div#search input[type="text"]:focus{
-  background:#fff url(/images/magnifier.png) 6px -13px no-repeat;
-  border-color:#308ed6;
-  -webkit-box-shadow: inset 0px 0px 4px #308ed6;
-  -moz-box-shadow: inset 0px 0px 4px #308ed6;
-  box-shadow: inset 0px 0px 4px #308ed6;
-  color:#308ed6;
-  
-}
-table.propriedades {
-width:90%;
-border:none;
-margin:0.5em 0 1.9em 0;
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
 }
 
-table.propriedades thead tr th
-{
-	text-align:center;
-	padding:0.5em;
-	background-color:#f2f2f2;
-	border-bottom:1px dotted #ccc;
-	font-weight: normal;
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
 }
 
-table.propriedades tr td {
-border-bottom:1px solid #C7E8F1;
-margin:0 0;
-padding:0.5em;
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-table.propriedades.canvas tr td
-{
-	padding:0.5em;
-	text-align:center;
+
+.clearfix:after                 { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+* html .clearfix                { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix    { zoom: 1; } /* IE7 */
+
+
+html {
+  background-color: #4e7178;
 }
 
-table.propriedades tr td.opcao {
-font-weight:normal;
-border-right:1px solid #FEB18D;
-padding-right:0.7em;
-text-align:right;
+body {
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+  margin:2% auto;
+  width:96%;
+  max-width:1440px;
+  background-color:#f1f7e2;
+  background:#f1f7e2 -webkit-gradient(linear, left bottom, left top, from(#f1f7e2), to(#e5e7eb)) repeat-x;
+  background:#f1f7e2 -webkit-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
+  background:#f1f7e2 -moz-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
+  background:#f1f7e2 -ms-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
+  background:#f1f7e2 linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
+  background-size:100% 150px;
+  border-top:1px solid #eceeef;
+  border-radius:1px;
+  text-shadow:#fffeff 0 1px 0;
+  -webkit-box-shadow:0 0 10px rgba(0,20,50,.25);
+  -moz-box-shadow:0 0 10px rgba(0,20,50,.25);
+  -o-box-shadow:0 0 10px rgba(0,20,50,.25);
+  box-shadow:0 0 10px rgba(0,20,50,.25);
 }
 
-ul{list-style:inside disc; margin-bottom:0.8em;}
-ul li{margin:0.7em 0 0.7em;}
-
-ul.nav{ list-style: inside none; width:100%; margin: 0 0!important;}
-ul.nav li{float:left;margin:0 0!important;width:50%; }
-ul.nav li.last{ text-align:right;}
-ul.nav li a{color:#999;margin:0 0;padding:0 0;padding:0.6em;display:inline-block;}
-
-ul#list-comments{list-style:inside none;}
-
-ul#list-comments li {
-	border-bottom:1px dotted #ccc;
-	margin: 0 0;
-	padding: 0.7em 0 0.7em;
+code, pre {
+  text-shadow: none;
 }
 
-ul#list-comments li.reply{
-	margin:0 0 0 5.2em;
+div#blog {
+  padding: 40px;
 }
 
-ul#list-comments li div.author {
-width:70px;
-float:left;
-text-align:center;
-font-size:11px;
-color:#9e9e9e;
-padding:0 0.7em 0 0;
-margin: 0 0.7em 0 0 ;
+header {
+  margin: 0 0 60px 0;
 }
 
-ul#list-comments li div.author p {
-margin:0 0;
+header nav {
+  float: right;
+  margin: 16px 0 0;
 }
 
-ul#list-comments li div.comment {
-float:left;
-width:588px;
+header nav ul {
+  display:block;
 }
 
-ul#list-comments li.owner {
-	color:#33a0da;
-}
-
-ul#list-comments li.owner p.date, ul#list-comments li.owner a{
-  color:#33a0da;
-}
-
-form.new_comment{
-  padding:12px;
-  background-color:#f2f2f2;
-  width:470px;
-  border-radius:6px;
-  -moz-border-radius:6px;
-  -moz-border-radius:6px;
-}
-
-form.new_comment p label, form.new_comment-reply p label {
-	display:block;
-} 
-
-small {
-	font-size:11px;
-	color:#333;
-}
-
-form.new_comment-reply input[type="text"], form.new_comment-reply textarea, form.new_comment input[type="text"], form.new_comment textarea {
-	width:450px;
-	padding:0.7em;
-}
-
-.error{
-	border-color:red;
-	color:red;
-}
-
-#bottom-toolbar {
-bottom:0;
-position: fixed;
-background:transparent url(/images/bottom-toolbar.png) 0 0 repeat-x;
-color:#fff;
-width:100%;
-height:50px;
-padding:0 0;
-font-size:13px;
-}
-
-#bottom-toolbar span.home{
-  display:inline-block;
-  margin:0 12px 0 0;
-}
-
-#bottom-toolbar a{
-  color:#df0d32;
-}
-
-h2 a{
-  color:#000!important;
-}
-
-h2 a:hover{
-  color:#df0d32!important;
-}
-
-#bottom-toolbar div.container{
-  margin:0 auto;
-  width:960px;
-  padding:20px 0 0;
-}
-
-#bottom-toolbar div.container ul.social{
-  float:right;
-}
-
-#bottom-toolbar div.container ul.social li{
+header nav ul li {
   float:left;
-  margin:0 0;
-  list-style:none;
+  border-left: 1px dotted #ccc;
 }
 
-#bottom-toolbar div.container ul.social li.rss{
-  margin:3px 0 0!important;
+header nav li a {
+  font-size:12px;
+  color:#333;
+  text-decoration:none;
+  text-transform:uppercase;
+  padding:0 13px;
 }
 
-code {
-  padding: 0 3px 2px;
-  font-family: Monaco, Andale Mono, Courier New, monospace;
+header nav li a:hover {
+  color:#000;
+  text-decoration: underline;
+}
+
+h1 {
+  font-size: 62px;
+  line-height:48px;
+  text-shadow:#fff 0 1px 0;
+  letter-spacing: -2px;
+  font-weight: 500;
+}
+
+h1 small {
+  font-size:16px;
+  color:#333;
+  letter-spacing: 0;
+  font-weight: 300;
+  text-transform: lowercase;
+  padding: 0 0 0 20px;
+}
+
+h2 {
+  font-size: 28px;
+  font-weight: 300;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 300;
+  color: #4e7178;
+  margin: 12px 0 0;
+}
+
+a {
+  text-decoration: none;
+  color: #4e7178;
+}
+
+h2 a {
+  color: #000;
+}
+
+h2 a:hover {
+  color: #4e7178;
+}
+
+ul#posts-index li{
+  margin: 0 0 60px 0;
+  border-left: 8px solid #000;
+  padding: 0 0 0 20px;
+}
+
+ul#posts-index li:hover{
+  border-color: #4e7178;
+}
+
+ul#posts-index li div.time-ago{
+  font-size: 14px;
+  margin: 12px 0 0;
+  color: #333;
+}
+
+span.label{
+  font-family: "Helvetica Neue", "Arial", sans-serif;
   font-size: 12px;
+  text-transform: lowercase;
+  margin: 0 0 0 12px;
+  background-color: #202b30;
+  color: #f1f7e2;
+  font-weight; 300;
+  text-shadow: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  color: rgba(0, 0, 0, 0.75);
-  padding: 1px 3px;
+  position: relative;
+  padding: 6px;
+  top: -7px;
 }
 
-div#comments{
-  border-top:1px dotted #ccc;
-  padding:24px 0 0;
-}
-
-#comments code{
-  display:block;
-  white-space:pre;
-/*
-  font-size:14px !important;
-  margin:12px 0 12px 0;
-  padding:4px;
-*/
-}
-
-div#posts{
-  margin:24px 0 0;
-}
-
-div.post-abstract{
-  margin:40px 0;
-  text-align:center;
-}
-
-div.post-abstract h1{
-  margin:0 0 ;
-  font-size:26px;
-  line-height:26px;
-  letter-spacing:-1.5px;
-  color:#999;
-  font-family:Helvetica, Arial, sans-serif;
-  font-weight:500;
-}
-
-div.post-abstract h1 a{
-  color:#333!important;
-}
-
-
-div.post-abstract h1 a:hover{
-  color:#666!important;
-}
-
-div.post-abstract h2 a{
-  font-size:24px!important;
-  color:#333!important;
-}
-
-div.post-abstract h2 a:hover{
-  color:#ff6600!important;
-}
-
-div.post-abstract p.time-ago{
-  color:#ccc;
-  font-weight:300;
-}
-
-div.post-abstract p.actions{
-  margin:12px 0 0;
-  border-bottom:1px dashed #ccc;
-  padding:0 0 24px 0;
-}
-
-div.post-abstract span a{
-  color:#ff6600!important;
-  border:none;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  border-radius:3px;
-  cursor:pointer;
-  padding:6px;
-  font-size:14px;
-  -webkit-box-shadow:  0px 0px 4px #666;
-  -moz-box-shadow:  0px 0px 4px #666;
-  box-shadow:  0px 0px 4px #666;
-  background-color:#fff;
-}
-
-.new_comment input[type="submit"]{
-  font-size:16px!important;
-  cursor:pointer;
-}
-
-.new_comment small{display:block;}
-
-p.abstract a{
-  color:#333!important;
-}
-
-p.abstract a:hover{
-  color:#000!important;
-}
-
-div.info{
-display: block;
-width: 95%;
-margin: 20px 0% 20px 0;
-margin-top: 20px;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-background: #B5E5EF url(../../images/admin/icn_alert_info.png) no-repeat;
-background-position: 10px 10px;
-border: 1px solid #77BACE;
-color: #082B33;
-padding: 10px 0;
-text-indent: 40px;
-font-size: 14px;
-}
-
-div#screenshots{
-  padding:12px;
-  text-align:center;
-  background-color:#f2f2f2;
-  
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-
-div.info a{
-  border-bottom:1px dotted #000;
-}
-
-ul.list{
-  margin:0 0 20px 0;
-}
-
-ul.list li{
-  padding:4px;
-  margin:4px 0 0 22px;
-  border-bottom:1px dashed #ccc;
-  list-style:square;
-}
-
-
-pre{
-  font-family:'Droid Sans Mono', monospace;
-  font-size:12px;
-  margin:12px 0;
-}
-
-blockquote{margin-bottom:18px;border-left:5px solid #eee;padding-left:15px;}blockquote p{font-size:14px;font-weight:300;line-height:18px;margin-bottom:0;}
-blockquote small,blockquote cite{display:block;font-size:12px;font-weight:300;line-height:18px;color:#bfbfbf;}blockquote small:before,blockquote cite:before{content:'\2014 \00A0';}
-blockquote p{margin:0 0!important;line-height:auto!important;}
-
-div.alert-message{background-color:rgba(0, 0, 0, 0.15);background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.15)));background-image:-moz-linear-gradient(transparent, rgba(0, 0, 0, 0.15));background-image:-ms-linear-gradient(transparent, rgba(0, 0, 0, 0.15));background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, rgba(0, 0, 0, 0.15)));background-image:-webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.15));background-image:-o-linear-gradient(transparent, rgba(0, 0, 0, 0.15));-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='rgba(0, 0, 0, 0.15)', GradientType=0)";filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='rgba(0, 0, 0, 0.15)', GradientType=0);background-image:linear-gradient(transparent, rgba(0, 0, 0, 0.15));background-color:#e6e6e6;margin-bottom:18px;padding:8px 15px;color:#fff;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);border-bottom:1px solid rgba(0, 0, 0, 0.25);-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}div.alert-message p{color:#fff;margin-bottom:0;}div.alert-message p+p{margin-top:5px;}
-div.alert-message.error{background-color:#e06359;}
-div.alert-message.warning{background-color:#ffd75a;}
-div.alert-message.success{background-color:#74c474;}
-div.alert-message.info{background-color:#30c0fb;}
-div.alert-message a.close{float:right;margin-top:-2px;color:#fff;font-size:20px;font-weight:bold;text-shadow:0 1px 0 rgba(0, 0, 0, 0.5);filter:alpha(opacity=50);-khtml-opacity:0.5;-moz-opacity:0.5;opacity:0.5;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}div.alert-message a.close:hover{text-decoration:none;filter:alpha(opacity=50);-khtml-opacity:0.5;-moz-opacity:0.5;opacity:0.5;}
-
-.label {
-    background-color: #BFBFBF;
-    border-radius: 3px 3px 3px 3px;
-    color: #FFFFFF;
-    font-size: 9.75px;
-    font-weight: bold;
-    text-transform: uppercase;
-    height: 11px;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin: 0 0 0 12px;
-    padding: 4px;
-    text-transform: uppercase;
-    vertical-align: middle;
-    display: inline-block;
-}
-.label.important {
-    background-color: #C43C35;
+span.label.tableless{
+  background-color: #eb181e;
 }
