--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -1,14 +1,19 @@
-<header class="clearfix">
+<section id="top">
   <% if blog_home_page? %>
-  <nav class="clearfix">
+  <nav>
     <ul>
-      <li><a href="/">Portfolio</a></li>
-      <li><a href="#">Github</a></li>
-      <li><a href="#">Twitter</a></li>
+      <li><a href="/a" title="Portfolio">Portfolio</a></li>
+      <li><a href="#b" title="Github">Github</a></li>
+      <li><a href="#c" title="Twitter">Twitter</a></li>
+      <li><a href="#c" title="Linkedin">Linkedin</a></li>
     </ul>
   </nav>
-  <h1>Davi Ferreira<small>Desenvolvedor @ Globo.com</small></h1>
-  <% else %>
-  <h1><%= @post.title %></h1>
   <% end %>
-</header>
+  <header>
+    <% if blog_home_page? %>
+	  <h1>Davi Ferreira</h1>
+	  <% else %>
+	  <h1><%= @post.title %></h1>
+	  <% end %>
+  </header>
+</section>
