--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,28 +1,32 @@
-<div class="post">
-  <article class="alpha">
+<section id="post">
+  <article>
     <%= raw(@post.body) %>
   </article>
+</section>
   
-  <div id="comments">
-    <% if not @post.block_comments or not @post.comments.published.empty? %>
-      <h2><%= total_comments_in_words(@post.comments.published.length) %></h2>    <% end %>
+<section id="comments">
+	<% if not @post.block_comments or not @post.comments.published.empty? %>
+	  <h2><%= total_comments_in_words(@post.comments.published.length) %></h2>    
+	<% end %>
     
-    <% unless @post.comments.published.empty? %>
-      <ul id="list-comments">
-        <% @post.comments.published.each do |comment| %>
-          <%= render comment if comment.comment_id.nil? or comment.comment_id == 0 %>
-        <% end %>
-      </ul>
-    <% end %>
-    
-    <% if not @post.block_comments %>
-    <h3 id="tit-form-comment">Deixe seu comentário:</h3>
-      <%= render "comments/form", :id => "new_comment" %>
-    <% else %>
-      <div class="alert-message info" style="text-align:center;">O envio de comentários está bloqueado para este post.</div>
-    <% end %>
-  </div>
-</div>
+	<% unless @post.comments.published.empty? %>
+	    <% @post.comments.published.each do |comment| %>
+	      <%= render comment if comment.comment_id.nil? or comment.comment_id == 0 %>
+	    <% end %>
+	<% end %>
+</section>
+
+<% if not @post.block_comments %>
+<section id="comments-form">
+	<header>
+		<h3 id="tit-form-comment">Deixe seu comentário:</h3>
+	</header>
+  <%= render "comments/form", :id => "new_comment" %>
+</section>
+<% else %>
+  <div class="alert-message info" style="text-align:center;">O envio de comentários está bloqueado para este post.</div>
+<% end %>
+
 
 <script type="text/javascript">
 $(function(){
