Switching back to delicious.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
         </li>
         <li>Mais sobre minha vida profissional, visite meu perfil no <%=link_to "Linkedin", "http://br.linkedin.com/in/daviferreira" %>.</li>
         <li>Meus projetos open source estão hospedados no <%=link_to "GitHub", "http://www.github.com/daviferreira" %>.</li>
-        <li>Meus links favoritos você encontra no <%= link_to "Gimmebar", "https://gimmebar.com/loves/daviferreira" %>.</li>
+        <li>Meus links favoritos você encontra no <%= link_to "Delicious", "http://www.delicious.com/daviferreira" %>.</li>
         <li>Alguns trabalhos de criação estão disponíveis no <%= link_to "DeviantArt", "http://daviferreira.deviantart.com" %>.</li>
         <li>E pra conferir as músicas que gosto acesse o meu perfil no <%= link_to "Last.fm", "http://www.last.fm/user/davitf" %>.</li>
         
